cleaned code + comments

--- a/packages/pure-pursuit/package.xml
+++ b/packages/pure-pursuit/package.xml
@@ -6,7 +6,7 @@
 
   <author email="steven@todo.todo">steven</author>
   <author email="syliu@mit.edu">Shih-Yuan Liu</author>
-  <maintainer email='a@khalifa.ca'>Abderrahim KHALIFA</maintainer>
+  <maintainer email='khalifa.abde@outlook.com'>Abderrahim KHALIFA</maintainer>
 
   <license>GPLv3</license>
 
